fix(payment): make webhooks and financial operations durable